--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /.shards/
 *.dwarf
 .vscode
-test.cr
+test*.cr
+test*.sh
 
 # Libraries don't need dependency lock
 # Dependencies will be locked in applications that use them
