--- a/shard.yml
+++ b/shard.yml
@@ -14,3 +14,11 @@ dependencies:
     version: ~> 0.2.0
   db:
     github: crystal-lang/crystal-db
+
+development_dependencies:
+  ameba:
+    github: crystal-ameba/ameba
+    version: ~> 0.12.0
+
+executables:
+  - ameba
