disable sharded tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: crystal
 env:
   matrix:
     - MONGODB_VERSION=4.0.18 MONGODB_RELEASE=4.0
-    - MONGODB_VERSION=4.2.7  MONGODB_RELEASE=4.2
+    - MONGODB_VERSION=4.2.8  MONGODB_RELEASE=4.2
 
 addons:
   apt:
@@ -27,4 +27,5 @@ before_script:
 script:
   - crystal spec --tag single
   - crystal spec --tag replicaset
-  - crystal spec --tag sharded
+  # starting mongo in sharded mode with mlaunch seems to be unstable and fails randomly
+  # - crystal spec --tag sharded
