--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: cryomongo
-version: 0.2.2
+version: 0.2.3
 
 authors:
   - elbywan <elbywan@hotmail.com>
@@ -21,5 +21,7 @@ development_dependencies:
     version: ~> 0.12.0
 
 targets:
+  cryomongo:
+    main: src/cryomongo.cr
   ameba:
     main: lib/ameba/src/cli.cr
