--- a/shard.yml
+++ b/shard.yml
@@ -14,6 +14,9 @@ dependencies:
     version: ~> 0.3.0
   db:
     github: crystal-lang/crystal-db
+  durian:
+    github: 636f7374/durian.cr
+    version: ~> 0.1.5
 
 development_dependencies:
   ameba:
