feat: add transactions support
+ fix various issues (cursors pinning, sharding, error handling)

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,4 @@ before_script:
   - mongod --version
 
 script:
-  - crystal spec --tag single
-  - crystal spec --tag replicaset
-  - crystal spec --tag sharded
+  - crystal spec
