chore(ci): split specs by topology type

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,7 @@ before_script:
   - mongod --version
 
 script:
-  - crystal spec
+  - crystal spec --tag single
+  - crystal spec --tag replicaset
+  - crystal spec --tag sharded
+  - crystal spec --tag sharded_multiple_mongos
