--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: cryomongo
-version: 0.3.9
+version: 0.3.10
 
 authors:
   - elbywan <elbywan@hotmail.com>
@@ -26,3 +26,6 @@ targets:
     main: src/cryomongo.cr
   ameba:
     main: lib/ameba/src/cli.cr
+
+crystalline:
+  main: .crystalline_main.cr
