--- a/shard.yml
+++ b/shard.yml
@@ -12,14 +12,14 @@ dependencies:
   bson:
     github: elbywan/bson.cr
     version: ~> 0.3.0
-  durian:
-    github: 636f7374/durian.cr
-    version: ~> 0.1.5
+  dns:
+    github: spider-gazelle/dns
+    branch: main
 
 development_dependencies:
   ameba:
     github: crystal-ameba/ameba
-    version: ~> 0.14.0
+    version: ~> 1.6.3
 
 targets:
   cryomongo:
